--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,35 @@
 
 body {
     background: #ccbb99;
+    margin: 0;
+    padding: 0;
 }
 #container {
-    background: #eeeeee;
-    width: 550px;
-    border: 4px solid #008000;
+    width: 600px;
     margin: 20px auto;
 }
 #navbar {
-    border-bottom: 2px solid #008000;
     background: #cccccc;
-    padding: 4px 15px;
+    border: 4px solid #008000;
+    border-bottom: 2px solid #008000;
+    border-radius: 10px 10px 0px 0px;
+    padding: 3px 0;
 }
 #navbar a {
-    margin-right: 15px;
+    margin-left: 15px;
 }
 #content {
+    background: #eeeeee;
+    border-left: 4px solid #008000;
+    border-right: 4px solid #008000;
     padding: 10px 15px;
 }
 #footer {
-    border-top: 2px solid #008000;
-    text-align: center;
     background: #cccccc;
+    border: 4px solid #008000;
+    border-top: 2px solid #008000;
+    border-radius: 0px 0px 10px 10px;
+    text-align: center;
     font-size: 15px;
     font-style: italic;
 }
